# xxhash-rs

./: .gitignore  Cargo.toml  LEGAL.md  LICENSE-APACHE  LICENSE-MIT  README.md
benchmarks/: claim_gate.py  comparators.json  harness.py  policy.json  reconcile.py  scenarios.json  seed_run_set.py  test_claim_gate.py  test_harness.py  test_isolated_claim_gate.py  test_run_index_concurrency.py
publication/: REWRITE_STUDY.md  claim_map.py  generate_evidence.py  style_gate.py  traceability_check.py
publication/evidence/: artifact_manifest.json  benchmark_summary.json  claim_map_inputs.json  clean_checkout_provenance.json  parity_summary.json  (+1 more)
xxhash-cli/: Cargo.toml
xxhash-cli/src/: main.rs
xxhash-cli/tests/: cli_algorithm_selection.rs  cli_check_escaped_and_little_endian.rs  cli_check_malformed_lines.rs  cli_check_status_and_ignore_missing.rs  cli_check_success_and_failures.rs  cli_filelist_parity.rs  cli_input_flow_parity.rs  cli_output_format_parity.rs
xxhash-rs/: Cargo.toml
xxhash-rs/src/: helpers.rs  lib.rs  xxh3.rs  xxh32.rs  xxh3_simd.rs  xxh64.rs
xxhash-rs/tests/: benchmark_claim_gate.rs  benchmark_correctness_gate.rs  benchmark_manifest_matrix.rs  benchmark_run_resolution.rs  hash_vectors_boundary_matrix.rs  manual_parity_check.rs  oneshot_reference_parity.rs  reference_fixture_loading.rs  streaming_chunk_parity.rs  streaming_digest_state.rs  xxh32_vectors.rs  xxh3_128_vectors.rs  xxh3_64_vectors.rs  xxh3_optimized_path_detection.rs  xxh3_simd_scalar_parity.rs  xxh64_vectors.rs
xxhash-rs/tests/fixtures/: mod.rs  reference.rs  vectors.rs
(+54 files in other folders)
